# car-crash-fix-amount-predictor

./: .gitignore  CITATIONS.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  app.py  packages.txt  pyproject.toml  requirements.txt
docs/: network-architecture.html
notebooks/: 00_overview.ipynb  01_data_and_preprocessing.ipynb  01_eda.ipynb  02_classifier_resnet50.ipynb  03_detector_yolov8.ipynb  04_cost_regressor_xgboost.ipynb  05_metrics_deep_dive.ipynb  06_end_to_end_inference.ipynb  README.md  _build_notebooks.py  ccdp_submission.ipynb  ccdp_submission_stanford.ipynb  colab_train_identifier.ipynb  colab_yolo_quickwins.ipynb  kaggle_train_identifier.ipynb  train_damage_seg_hitl_pathA.ipynb
progress/: STATUS.md  phase_0_scaffold.md  phase_1_5_car_identifier.md  phase_1_data_and_identification.md  phase_2a_resnet_classifier.md  phase_2b_yolov8_detector.md  phase_3_comparison_and_serving.md  phase_4_promotion_and_final_report.md
scripts/: build_bundles.py  build_submission_package.py  download_datasets.sh  extend_training.sh  extend_v2_and_yolov8s.sh  precompute_vmmrdb_bboxes.py  render_notebook_assets.py  render_notebook_metrics.py  train_all.sh
submission/: CCDP_Project_Report.docx  README.md  RUNNING.md  requirements.txt
tests/: test_auto_identify.py  test_car_gate.py  test_car_identifier.py  test_cardd_seg.py  test_compcars.py  test_costing.py  test_damage_classifier.py  test_data_schema.py  test_demo_estimate.py  test_eval_metrics.py  test_fx.py  test_loaders_and_inference.py  test_mixup.py  test_ml_identifier.py  test_multi_car.py  test_negatives_mix.py  (+11 more)
(+84 files in other folders)
